round orchestrator scheduling, fe ci fix, lombok